--- a/models/yolov5_for_small_obj.yaml
+++ b/models/yolov5_for_small_obj.yaml
@@ -27,12 +27,12 @@ backbone:
 # YOLOv5 head
 head:
   [[-1, 1, Conv, [512, 1, 1]],
-   [-1, 1, nn.Upsample, [None, 2, 'nearest']],
+   [-1, 1, nn.Upsample, [None, 4, 'nearest']],#更改
    [[-1, 6], 1, Concat, [1]],  # cat backbone P4
    [-1, 3, BottleneckCSP, [512, False]],  # 13
 
    [-1, 1, Conv, [256, 1, 1]],
-   [-1, 1, nn.Upsample, [None, 2, 'nearest']],
+   [-1, 1, nn.Upsample, [None, 4, 'nearest']],#更改
    [[-1, 4], 1, Concat, [1]],  # cat backbone P3
    [-1, 3, BottleneckCSP, [256, False]],  # 17 (P3/8-small)
 
