--- a/models/yolov5_for_small_obj.yaml
+++ b/models/yolov5_for_small_obj.yaml
@@ -27,7 +27,7 @@ backbone:
 # YOLOv5 head
 head:
   [[-1, 1, Conv, [512, 1, 1]],
-   [-1, 1, nn.Upsample, [None, 4, 'nearest']],#更改
+   [-1, 1, nn.Upsample, [None, 2, 'nearest']],
    [[-1, 6], 1, Concat, [1]],  # cat backbone P4
    [-1, 3, BottleneckCSP, [512, False]],  # 13
 
