--- a/data/hyp.finetune.yaml
+++ b/data/hyp.finetune.yaml
@@ -8,31 +8,31 @@
 #                   P         R     mAP.5 mAP.5:.95       box       obj       cls
 # Metrics:        0.6     0.936     0.896     0.684    0.0115   0.00805   0.00146
 
-lr0: 0.0032
-lrf: 0.12
-momentum: 0.843
-weight_decay: 0.00036
-warmup_epochs: 2.0
-warmup_momentum: 0.5
-warmup_bias_lr: 0.05
-box: 0.0296
-cls: 0.243
-cls_pw: 0.631
-obj: 0.301
-obj_pw: 0.911
+lr0: 0.00837
+lrf: 0.181
+momentum: 0.971
+weight_decay: 0.00045
+warmup_epochs: 2.77
+warmup_momentum: 0.816
+warmup_bias_lr: 0.0879
+box: 0.0314
+cls: 0.478
+cls_pw: 1.04
+obj: 1.24
+obj_pw: 1.04
 iou_t: 0.2
-anchor_t: 2.91
-# anchors: 3.63
+anchor_t: 4.3
+anchors: 2.0
 fl_gamma: 0.0
-hsv_h: 0.0138
-hsv_s: 0.664
-hsv_v: 0.464
-degrees: 0.373
-translate: 0.245
-scale: 0.898
-shear: 0.602
+hsv_h: 0.0145
+hsv_s: 0.756
+hsv_v: 0.349
+degrees: 0.0
+translate: 0.0
+scale: 0.0
+shear: 0.0
 perspective: 0.0
-flipud: 0.00856
+flipud: 0.5
 fliplr: 0.5
-mosaic: 1.0
-mixup: 0.243
+mosaic: 0.0
+mixup: 0.0
